<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Wake On Lan</string>
	<string name="app_desc">A simple Wake On Lan application. Stores history of sent packets to save remembering MAC addresses.</string>
	<string name="button_wake">Send Wake Packet</string>
	<string name="button_save">Save &amp; End Editing</string>
	<string name="button_clear">Clear Form</string>
	<string name="button_cancel">Cancel Edit</string>
	<string name="tab_history">History</string>
	<string name="tab_wake">Wake</string>
	<string name="title_history">History</string>
	<string name="title_wake">Wake</string>
	<string name="title">Reference</string>
	<string name="mac">MAC Address</string>
	<string name="ip">Host Name / IP Address</string>
	<string name="port">Port</string>
	<string name="menu_wake">Send Wake Packet</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_delete">Remove</string>
	<string name="menu_sortby">Sort By</string>
	<string name="menu_lastused">Recent</string>
	<string name="menu_usedcount">Frequent</string>
	<string name="menu_created">Created</string>
	<string name="invalid_mac">Invalid MAC Address</string>
	<string name="send_failed">Sending Failed</string>
	<string name="packet_sent">Magic Packet sent</string>
    <string name="save">Save</string>
	<string name="test">Test</string>
	<string name="item_edit_load_failed_msg">Failed to load history item for editing</string>
    <string name="wake_service_notif_title">Wake service</string>
	<string name="wake_service_notif_text">Sending wake packet</string>
</resources>
