<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="historyItem"
            type="net.mafro.android.wakeonlan.HistoryIt" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/wake_form_padding"
    tools:showIn="@layout/wake_fragment">

    <TextView
        android:id="@+id/wf_reference_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wf_reference_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@{historyItem.title}"
        android:inputType="textCapWords"
        />

    <TextView
        android:id="@+id/wf_macaddr_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mac"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wf_macaddr_tv"
        android:text="@{historyItem.mac}"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/wf_hnip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        app:layout_constraintTop_toBottomOf="@id/mac" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wf_hnip_tv"
        android:text="@{historyItem.ip}"
        android:inputType="text"
        />
n
    <TextView
        android:id="@+id/wf_port_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port"
        app:layout_constraintTop_toBottomOf="@id/ip" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wf_port_tv"
        android:text="@{Integer.toString(historyItem.port)}"
        android:inputType="number"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>