<?xml version="1.0" encoding="utf-8"?>
<layout>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wakeview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include layout="@layout/wake_form"
            android:id="@+id/wake_form"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="@dimen/wake_form_padding"
            >

            <Button
                android:id="@+id/clear_wake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <Button
                android:id="@+id/test_wake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test"
                app:layout_constraintTop_toBottomOf="@id/clear_wake"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_wake"
                />

            <Button
                android:id="@+id/save_wake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintTop_toTopOf="@id/test_wake"
                app:layout_constraintStart_toEndOf="@id/test_wake"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
</layout>